--- a/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -23,14 +23,14 @@
       </div>
       <div class="md:col-4" *ngIf="respondingToTimestampInfo != null">
         <!-- Placeholder for additional information when rejecting timestamp -->
-        <div *ngIf="parseTimestampResponseStatus() == 'ACCEPTED'">
+        <div *ngIf="timestampResponseStatus === TimestampResponseStatus.ACCEPT">
           <label class="label-compressed" for="eventtimestamp">{{'general.table.header.eventTimestamp.acceptedLabel' |
             translate }}: </label>
           <span style="font-weight: bold;">{{ " " +(respondingToTimestampInfo.operationsEventTO.eventDateTime |
             timestampToTimezone:
             transportCall.portOfCall)[0]}}</span>
         </div>
-        <div *ngIf="parseTimestampResponseStatus() == 'REJECTED'">
+        <div *ngIf="timestampResponseStatus === TimestampResponseStatus.REJECT">
           <label class="label-compressed" for="eventtimestamp">{{'general.table.header.eventTimestamp.declinedLabel' |
             translate }}: </label>
           <span style="font-weight: bold;">{{ " " +(respondingToTimestampInfo.operationsEventTO.eventDateTime |
@@ -52,7 +52,7 @@
 
 <div [formGroup]="timestampFormGroup" class="p-fluid p-formgrid grid">
 
-  <div class="md:col-6" *ngIf="parseTimestampResponseStatus() == 'CREATE'">
+  <div class="md:col-6" *ngIf="timestampResponseStatus === TimestampResponseStatus.CREATE">
     <div>
       <label for="timestampType">{{ 'general.table.header.timestamp.label' | translate }}: </label>
       <p-dropdown id="timestampType" styleClass="dropdown" formControlName="timestampType" [options]="timestampTypes"
@@ -66,7 +66,7 @@
       [options]="publisherRoleOptions" appendTo="body"></p-dropdown>
   </div>
 
-  <div class="md:col-6" *ngIf="parseTimestampResponseStatus() != 'ACCEPTED'">
+  <div class="md:col-6" *ngIf="timestampResponseStatus !== TimestampResponseStatus.ACCEPT">
     <label for="eventtimestamp">{{ 'general.table.header.eventTimestamp.label' | translate }}: </label>
     <div class="p-fluid p-formgrid grid">
       <div class="md:col-6">
