--- a/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -102,7 +102,7 @@
     </p-dropdown>
     <span *ngIf="timestampFormGroup.get('terminal').hasError('required') 
     && timestampFormGroup.get('terminal').touched" class="p-invalid">
-      {{ 'general.transportCall.validation.terminal.emptyTS' | translate }}
+      {{ 'general.transportCall.validation.terminal.empty' | translate }}
     </span>
   </div>
 
