DDT-1204: PortCallPart backend filter

--- a/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/src/app/view/timestamp-table/timestamp-table.component.html
@@ -14,21 +14,12 @@
             <div class="col">
               <p-dropdown  [disabled]="this.filterTerminals.length < 2"
                            class="dropdown"
-                           (onChange)="terminalSelected()"
+                           (onChange)="filterSelected()"
                            [(ngModel)]="filterTerminal"
                            [filter]="true"
                            [options]="filterTerminals"
                            filterBy="label,value.facilityName"
                            appendTo="body">
-                <ng-template let-terminal pTemplate="item">
-                  <div *ngIf="!terminal.value">
-                    <div>Select Terminal</div>
-                  </div>
-                  <div *ngIf="terminal.value">
-                    <div>{{terminal.value.facilitySMDGCode}}</div>
-                    <div class="portListName">{{terminal.value.facilityName}}</div>
-                  </div>
-                </ng-template>
               </p-dropdown>
             </div>
             <div class="col">
@@ -36,9 +27,9 @@
                     [options]="negotiationCycles" [filter]=true filterBy="label" appendTo="body"
                     (onChange)="filterTimestamps()">
                 </p-dropdown>
-                <p-dropdown id="portCallPart" styleClass="dropdown" [(ngModel)]="selectedPortCallPart"
-                    [options]="portCallParts" [filter]=true filterBy="label" appendTo="body"
-                    (onChange)="filterTimestampsByPortOfCallPart()">
+                <p-dropdown id="portCallPart" styleClass="dropdown" [(ngModel)]="filterPortCallPart"
+                    [options]="filterPortCallParts" [filter]=true filterBy="label" appendTo="body"
+                    (onChange)="filterSelected()">
                 </p-dropdown>
             </div>
             <div class="col tableHeader">
