--- a/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -242,7 +242,7 @@
     <span *ngIf="transportCallFormGroup.get('vesselDraft').hasError('pattern')" class="p-invalid">
       {{ 'general.timestamp.vesselDraft.pattern' | translate }}
     </span>
-    <span [hidden]="isDimensionUnit()" class="p-warning">
+    <span [hidden]="hasDimensionUnit()" class="p-warning">
       {{ 'general.timestamp.vesselDraft.missingUnit' | translate }}
     </span>
   </div>
