Add showClear to optional/filter fields
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/port-of-call/port-of-call.component.html
+++ b/src/app/view/port-of-call/port-of-call.component.html
@@ -6,6 +6,7 @@
         (onChange)="selectPortOfCall()"
         [(ngModel)]="portOfCall"
         [filter]="true"
+        [showClear]=true
         [options]="portOptions"
         filterBy="label,value.UNLocationCode">
         <ng-template let-port pTemplate="item">
