--- a/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -57,6 +57,7 @@
       <label for="negotiationCycle">{{ 'general.table.header.negotiationCycle.label' | translate }}: </label>
       <p-dropdown id="negotiationCycle" styleClass="dropdown" formControlName="negotiationCycle"
                   [options]="negotiationCycles"
+                  [showClear]=true
                   [filter]=true filterBy="label" appendTo="body"
                   (onChange)="onSelectedNegotiationCycle($event)">
 
@@ -132,8 +133,13 @@
   <!-- Delay Code dropdown -->
   <div class="md:col-6">
     <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
-    <p-dropdown appendTo="body" id="delayCode" [options]="delayCodeOptions" formControlName="delayCode" [filter]="true"
-      filterBy="label,value.name" [group]="false">
+    <p-dropdown appendTo="body" id="delayCode"
+                [options]="delayCodeOptions"
+                formControlName="delayCode"
+                [filter]="true"
+                [showClear]=true
+                filterBy="label,value.name"
+                [group]="false">
       <ng-template let-delayCode pTemplate="selectedItem">
         <div *ngIf="delayCode.value" class="delayCodeSelectedWrapper">
           <div class="delayCodeSelected__smdgCode">{{delayCode.value.smdgCode}}</div>
