DDT-1212:  disable dimensionUnit if set once
- disable dimensionUnit on Vessel dialog if set once (originally)

--- a/src/app/view/vessel-editor/vessel-editor.component.html
+++ b/src/app/view/vessel-editor/vessel-editor.component.html
@@ -113,6 +113,9 @@
         <p-dropdown appendTo="body" [filter]="true" formControlName="dimensionUnit" [options]="dimensionUnits"
           (onChange)="toggleDimensionFields()">
         </p-dropdown>
+        <span *ngIf="hasDimensionUnit()" class="p-warning">
+          {{ 'general.vessel.dimensionUnit.setOnce' | translate }}
+        </span>
       </div>
     </div>
 
