--- a/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -42,8 +42,10 @@
     <tr [pSelectableRow]="transportCall"
         [ngClass]="{'obsoleteTransportCall': transportCall.atdBerthDateTime != undefined || isOmitted(transportCall), 'omitted': isOmitted(transportCall)}"
     >
-      <td pTooltip="{{  transportCall.vessel | vesselTooltip}}">  {{transportCall.vessel.vesselName}}</td>
-      <td pTooltip="{{  transportCall.vessel | vesselTooltip }}"> {{transportCall.vessel.vesselIMONumber}}</td>
+      <td pTooltip="{{  transportCall.vessel | vesselTooltip: transportCall.milesToDestinationPort : transportCall.vesselDraft}}"> 
+         {{transportCall.vessel.vesselName}}</td>
+      <td pTooltip="{{  transportCall.vessel | vesselTooltip: transportCall.milesToDestinationPort : transportCall.vesselDraft }}"> 
+        {{transportCall.vessel.vesselIMONumber}}</td>
       <td>{{transportCall.UNLocationCode}}</td>
       <td pTooltip="UTC: {{(transportCall.etaBerthDateTime | timestampToTimezone: transportCall.portOfCall)[1]}}">
         {{(transportCall.etaBerthDateTime | timestampToTimezone: transportCall.portOfCall)[0]}}</td>
